changed backgroudn to blue and make slight changes to html file

--- a/Index.html
+++ b/Index.html
@@ -7,5 +7,11 @@
   <body>
     <<h1>his is going to eb great
     </h1>
+    <<header>
+      <a href="/home.html">Home</a>
+      <a href="/about.html">About</a>
+      <a href="/ring.html">Ring</a>
+      <a href="/power.html">Powers</a>
+    </header>
   </body>
 </html>
