I added a side bar

--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,8 @@
       <a href="/about.html">About</a>
       <a href="/ring.html">Ring</a>
       <a href="/power.html">Powers</a>
+      <aside><<img src="ad.jpg" alt="">
+      </aside>
     </header>
   </body>
 </html>
