Added a unorder list

--- a/Index.html
+++ b/Index.html
@@ -7,5 +7,9 @@
   <body>
     <<h1>his is going to eb great
     </h1>
+    <<ul>
+      <<li>Yes</li>
+      <<li>No</li>
+    </ul>
   </body>
 </html>
